--- a/password-strength/index.html
+++ b/password-strength/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <title>Password Strength Checker</title>
 </head>
 
 <body>
