improved random image feed by making it more interactive

--- a/random-image-feed/index.html
+++ b/random-image-feed/index.html
@@ -11,7 +11,10 @@
 
 <body>
     <h1>Random Image Feed</h1>
-
+    <div class="amount-container">
+        <label for="amount"> Select amount of images you want and press enter:</label>
+        <input type="number" id="amount">
+    </div>
     <div class="grid-container"></div>
 </body>
 
